# minicap-frame-grab

./: Cargo.toml  README.md
src/: main.rs  minicap_client.rs  models.rs  server.rs
src/web_server/: mod.rs
static/: viewer.css  viewer.html  viewer.js
