[package]
name = "minicap-frame-grab"
version = "0.2.6"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
bytes = "1.0"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
adb_control = { git = "https://github.com/jade-clarke/adb_control", version = "0.4.1" }
